fix: let greeting image div grow to fit code animation on mobile

--- a/src/containers/greeting/Greeting.scss
+++ b/src/containers/greeting/Greeting.scss
@@ -88,7 +88,7 @@
     display: block;
   }
   .greeting-image-div {
-    height: 256px;
+    height: auto;
   }
 }
 
